sass/_sidebar.scss
// SIDEBAR GENERAL
.sidebar {
    width: 188px;
    height: 100%;
    position: fixed;
    top: 0;
    left: 0;
    z-index: 9999;
}
.sidenav-list {
    font-size: $paragraph-font-size;
    line-height: $line-h-1;
    font-family: $page-font;
    font-weight: 300;
}
.sidenav-list ul {
    padding-left: 0;
    margin: 0;
    list-style-type: none;
    a {
        text-decoration: none;
        color: $sidebar-icon-text-color;
    }
}
// SIDEBAR LIST
.sidenav {
    display: flex;
    justify-content: flex-start;
    height: 39px;
    background-color: $sidebar-bg-color;
    &:hover .sidenav-name-hover {
        background-color: $sidebar-hover-color;
        color: $section-bg-color;
        width: 100%;
        border-left: 4px solid $orange-button-color;
    }
    &:hover .icon {
        fill: $section-bg-color;
    }
}
.sidenav-name-hover {
    display: flex;
    justify-content: flex-start;
    align-items: center;
    padding-left: 20px;
}
// SIDEBAR ICONS
.name-position {
    padding-left: 14px;
}
.icon {
    fill: $sidebar-icon-text-color;
}
.general-icon {
    height: 15px;
    width: 16px;
}
.details-icon {
    height: 13px;
    width: 14px;
}
.links-icon {
    height: 8px;
    width: 16px;
}
.banners-icon {
    height: 13px;
    width: 14px;
}
.personal-data-icon {
    height: 13px;
    width: 9px;
}
.payout-icon {
    height: 13px;
    width: 13px;
}
.postback-icon {
    height: 14px;
    width: 13px;
}
// LOGO AND HAMBURGER
.sidenav-logo {
    @extend .sidenav;
    height: 60px;
}
.logo-size {
    height: 23px;
    width: 86px;
    margin: 18px 0 0 20px;
}
.hamburger-icon {
    height: 20px;
    width: 23px;
    margin: 23px -14px 0 31px;
    cursor: pointer;
}
#hamburger-menu,
#hamburger-menu-smaller {
    display: none;
}
// SIDEBAR MANAGER USER 
.sidenav-manager-user {
    background-color: $sidebar-bg-color;
    height: 100%;
    position: relative;
    img {
        margin-left: 18px;
    }
}
.sidenav-list ul:last-child {
    padding-bottom: 27px;
    border-bottom:  1px solid $text-color;
    background-color: $sidebar-bg-color;
}
.sidenav-text {
    font-size: $paragraph-font-size;
    line-height: $line-h-1;
    color: $sidebar-icon-text-color;
    font-family: $page-font;
    text-transform: uppercase;
    margin: 0 0 0 18px;
    padding: 0;
}
.sidenav-name {
    font-size: $paragraph-font-size;
    line-height: $line-h-1;
    color: $link-user-color;
    font-family: $page-font;
    font-weight: 300;
    display: inline-block;
    position: absolute;
    top: 30px;
}
.manager-status {
    margin-right: 11px;
    position: relative;
    &:after {
        position: absolute;
        content: "";
        top: -27px;
        left: 51px;
        width: 11px;
        height: 11px;
        border-radius: 5px;
        background-color: $manager-status;
    }
}

// SIDEBAR SMALLER SCREENS

.notification-status-sidebar {
    position: relative;
    &:after {
        position: absolute;
        content: "";
        top: 5px;
        left: 8px;
        width: 8px;
        height: 8px;
        border-radius: 4px;
        background-color: #f58220;
    }
}
.sidebar-smaller-screens {
	width: 188px;
	height: 100%;
	position: fixed;
	top: 0;
    left: 0;
}
.toggle-menu {
    width: 188px;
	height: 100%;
	position: fixed;
	top: 0;
    left: 0;
    transform: translateX(0em);
    transition: all .8s ease-out;
    display: none;
    z-index: 9999;
}
.hidden {
    display: none;
}
.active {
    display: inline-block;
}
// SIDEBAR MOBILE

.hamburger-icon-mobile {
    height: 20px;
    width: 23px;
    margin: 23px -14px 0 20px;
    cursor: pointer;
}
.img-position {
    padding-top: 24px;
}
.manager-status-mobile {
    margin-right: 11px;
    position: relative;
    &:after {
        position: absolute;
        content: "";
        top: -15px;
        left: 35px;
        width: 11px;
        height: 11px;
        border-radius: 5px;
        background-color: $manager-status;
    }
}
@media(max-width: 767px) {
    .sidebar {
		display: none;
	}
	.sidebar-mobile {
		width: 55px;
		height: 100%;
		position: fixed;
		top: 0;
		left: 0;
		z-index: 999;
	}
	.sidebar-smaller-screens {
		display: none;
    }
}

@media(min-width: 768px) {
    .sidebar {
		display: none;
	}
	.sidebar-mobile {
		display: none;
    }
    .sidebar-smaller-screens {
		display: inline-block;
	}
}

@media(min-width: 992px) {
    .sidebar {
		display: inline-block;
    }
    .sidebar-smaller-screens {
		display: none;
	}
}

